Changes from jTDS 0.9
=========================

10/27/2004 - Alin Sinpalean
 o Ran the FindBugs tool (http://findbugs.sourceforge.net) on the jTDS code
   base with no major results. Most signalled problems were either in the test
   suite or minor suggestions on the driver itself. Applied all suggestions
   that made sense.
 o Applied Mike's patch [1054878] Improved meta data. In addition to metadata
   improvements, the patch fixes a number of bugs, including [1049645]
   DatabaseMetaData getProcedures names have semicolon, [1019707]
   metaData.getProcedures has missing 8th column on Sybase and [1043569]
   Handling of unicode data when inserting into a TEXT field (not totally sure
   about the last one, though).

10/26/2004 - Alin Sinpalean
 o Reviewed and cleaned up Brian's latest statement cache update.

10/25/2004 - Brian Heineman
 o Created FastStatementCache for users with a limited number of unique
   prepared statements who want the fastest performance possible.
 o Added maxStatements property to control how many simultaneous statements the
   connection keeps open.
 o Corrected bug when dropping procedures; the logic for DROP PROC and
   sp_unprepare was reversed.
 o Reduced overhead associated with latching.  The connection now establishes a
   NonCachingStatementCache (yes, it is an oxymoron) when maxStatements is 0 and
   a FastStatementCache when maxStatements is Integer.MAX_VALUE.  This prevents
   the need for the latching methods to check the statement size each time.
 o These changes address RFE [920825] and bug [1019694].

10/25/2004 - Alin Sinpalean
 o Applied Mike's fix for bug [1052942] Error processing JDBC call escape.

10/21/2004 - Alin Sinpalean
 o Altered the interface of Brian's StatementCache interface to correctly
   handle both usage counts (searching by SQL string) and searching by key.
   Still need to do the implementation, though.
 o One more minor change for bug [1051747] Array out of bounds Exception in